syntax = "proto3";

option java_package = "com.fengfshao.dynamicproto.pb3";
option java_outer_classname = "SimplePersonV2";

message SimplePersonMessageV2 {
  int32 id = 1;
  string name = 2;
  Gender gender = 3;
  string email = 4;
  repeated string address = 5;
}

enum Gender{
  MALE = 0;
  FEMALE = 1;
}